--- a/package.xml
+++ b/package.xml
@@ -54,16 +54,19 @@
   <build_depend>pluginlib</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nav_core</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>dynamic_reconfigure</build_export_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nav_core</exec_depend>
   <exec_depend>pluginlib</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>dynamic_reconfigure</exec_depend>
 
   <export>
      <nav_core plugin="${prefix}/zm_potentialfield_plugin.xml" />
